--- a/openmemory/api/default_config.json
+++ b/openmemory/api/default_config.json
@@ -1,12 +1,11 @@
 {
     "mem0": {
         "llm": {
-            "provider": "openai",
+            "provider": "claude_cli",
             "config": {
-                "model": "gpt-4o-mini",
+                "model": "sonnet",
                 "temperature": 0.1,
-                "max_tokens": 2000,
-                "api_key": "env:OPENAI_API_KEY"
+                "max_tokens": 2000
             }
         },
         "embedder": {
