--- a/openmemory/api/config.json
+++ b/openmemory/api/config.json
@@ -1,4 +1,7 @@
 {
+    "openmemory": {
+        "custom_instructions": "사용자의 입력을 한국어로 정확히 보존하여 메모리로 저장하세요. 영어로 번역하거나 변환하지 말고, 원본 한국어 텍스트를 그대로 유지하세요. 사실과 정보를 추출할 때도 한국어로 작성하세요."
+    },
     "mem0": {
         "llm": {
             "provider": "openai",
