--- a/openmemory/api/config.json
+++ b/openmemory/api/config.json
@@ -1,22 +1,14 @@
 {
     "openmemory": {
-        "custom_instructions": "사용자의 입력을 한국어로 정확히 보존하여 메모리로 저장하세요. 영어로 번역하거나 변환하지 말고, 원본 한국어 텍스트를 그대로 유지하세요. 사실과 정보를 추출할 때도 한국어로 작성하세요."
+        "custom_instructions": "사용자의 입력을 한국어로 정확히 보존하여 메모리로 저장하세요. 영어로 번역하거나 변환하지 말고, 원본 한국어 텍스트를 그대로 유지하세요. 사실과 정보를 추출할 때도 한국어로 작성하세요. 모든 응답은 JSON 형식으로 제공해주세요."
     },
     "mem0": {
-        "llm": {
-            "provider": "openai",
-            "config": {
-                "model": "gpt-4o-mini",
-                "temperature": 0.1,
-                "max_tokens": 2000,
-                "api_key": "env:API_KEY"
-            }
-        },
+        "llm": null,
         "embedder": {
             "provider": "openai",
             "config": {
                 "model": "text-embedding-3-small",
-                "api_key": "env:API_KEY"
+                "api_key": "env:OPENAI_API_KEY"
             }
         }
     }
